<?xml version="1.0" encoding="UTF-8"?>
<resources>

  <string name="app_name">Twin Rinks Mobile</string>
  <string name="string_about">This app was conceived, designed, and developed by
    GigaStorm Developers. We hope you enjoy it. If you have any
    suggestions, feel free to send us an email using the button below.
    Or, you can give the app a rating on the Google Play Store.\n\nIf
    you are a developer and want to contribute to the project, search
    for twinrinks-mobile on github or send us an email to learn
    more.\n\nThanks to Boris Dubinsky for his contintued effort to add
    new features and improve the app!
  </string>
  <string name="gameview_top">Home vs Away</string>
  <string name="gameview_middle">Gold League - Red Rink</string>
  <string name="gameview_dateTime">Friday, 3/20/13, at 10:20PM</string>
  <string name="addNewTeams">Add New Teams&#8230;</string>
  <string name="mainIcon">Main Icon</string>
  <string name="share">Share</string>
  <string name="rate">Rate App</string>
  <string name="sendFeedback">Feedback</string>
  <string name="schedule_dataSelector">Choose Schedule Data</string>
  <string name="refresh">Refresh</string>
  <string name="help">Help</string>
  <string name="addGamesToCalendar">Add Games To Calendar</string>
  <string name="settings">Settings</string>
  <string name="data_url">https://raw.github.com/mass/twinrinks-mobile/master/ScheduleData.txt
  </string>

</resources>