<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/ScrollView1"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/app_name"
      android:textSize="30sp" />

    <ImageView
      android:id="@+id/imageView1"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_gravity="center"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp"
      android:contentDescription="@string/mainIcon"
      android:src="@drawable/image_launcher" />

    <TextView
      android:id="@+id/textView_gameview_bottom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:gravity="center" android:text="@string/string_about" android:textSize="18sp"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:layout_marginTop="10dp">

      <Button
        android:id="@+id/btn_about_share"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@drawable/background_button"
        android:text="@string/share" />

      <Button
        android:id="@+id/btn_about_rate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/background_button"
        android:text="@string/rate" />

      <Button
        android:id="@+id/btn_about_send"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:background="@drawable/background_button"
        android:text="@string/sendFeedback" />
    </LinearLayout>
  </LinearLayout>
</ScrollView>